--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
 
     <application
-        android:name="kr.co.permission.permission.AxPermissionApp"
+        android:name=".AxPermissionApp"
         android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -42,7 +42,7 @@
         android:usesCleartextTraffic="true"
         tools:ignore="LockedOrientationActivity"> 
         <activity
-            android:name="kr.co.permission.permission.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Compass">
             <intent-filter>
@@ -52,7 +52,7 @@
             </intent-filter>
         </activity>
         <service
-            android:name="kr.co.permission.permission.service.AccessibilityService"
+            android:name=".service.AccessibilityService"
             android:configChanges="orientation|screenSize"
             android:exported="true"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
@@ -67,7 +67,7 @@
         </service> <!-- 모지세 시작 -->
 
         <service
-            android:name="kr.co.permission.permission.service.MyNotificationListenerService"
+            android:name=".service.MyNotificationListenerService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
             android:exported="true">
