--- a/ax-permission/src/main/AndroidManifest.xml
+++ b/ax-permission/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
     <application>
         <activity
             android:name=".ui.PermissionActivity"
-            android:exported="true"/>
+            android:exported="true"
+            android:theme="@style/Theme.AxPermission"/>
     </application>
 
 </manifest>
