--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AxPermission"
+        android:theme="@style/Theme.AxPermission.App"
         android:usesCleartextTraffic="true"
         tools:ignore="LockedOrientationActivity">
 
