--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ activity = "1.9.1"
 fragment = "1.8.9"
 lifecycle = "2.9.2"
 constraintlayout = "2.1.4"
+datastore = "1.1.7"
 gson = "2.8.8"
 
 [libraries]
@@ -24,6 +25,7 @@ androidx-activity-ktx = { group = "androidx.activity", name = "activity-ktx", ve
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+androidx-datastore-preferences      = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" } # Preferences DataStore (SharedPreferences like APIs)
 google-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 
